--- a/example/index.html
+++ b/example/index.html
@@ -1,39 +1,54 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="input">
-      <!-- wp:columns {"columns":3} -->
-      <div class="wp-block-columns has-3-columns">
-        <!-- wp:column -->
-        <div class="wp-block-column">
-          <!-- wp:paragraph -->
-          <p>Left</p>
-          <!-- /wp:paragraph -->
-        </div>
-        <!-- /wp:column -->
+</head>
+<body>
+<div class="columns-3">
+    <div>
+      <pre>
+    <code>
 
-        <!-- wp:column -->
-        <div class="wp-block-column">
-          <!-- wp:paragraph -->
-          <p><strong>Middle</strong></p>
-          <!-- /wp:paragraph -->
-        </div>
-        <!-- /wp:column -->
+      <div id="input">
+        <!-- wp:columns {"columns":3} -->
+        <div class="wp-block-columns has-3-columns">
+          <!-- wp:column -->
+          <div class="wp-block-column">
+            <!-- wp:paragraph -->
+            <p>Left</p>
+              <!-- /wp:paragraph -->
+          </div>
+            <!-- /wp:column -->
 
-        <!-- wp:column -->
-        <div class="wp-block-column"></div>
-        <!-- /wp:column -->
+            <!-- wp:column -->
+          <div class="wp-block-column">
+            <!-- wp:paragraph -->
+            <p><strong>Middle</strong></p>
+              <!-- /wp:paragraph -->
+          </div>
+            <!-- /wp:column -->
+
+            <!-- wp:column -->
+          <div class="wp-block-column"></div>
+            <!-- /wp:column -->
+        </div>
+          <!-- /wp:columns -->
       </div>
-      <!-- /wp:columns -->
+
+    </code>
+      </pre>
     </div>
-    <div id="output"></div>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    <div id="output-def" class="bg-black-100">
+        <pre><code></code></pre>
+    </div>
+    <div id="output-wasm" class="bg-black-100">
+        <pre><code></code></pre>
+    </div>
+</div>
+<div id="root"></div>
+<script type="module" src="/src/main.tsx"></script>
+</body>
 </html>
