--- a/example/index.html
+++ b/example/index.html
@@ -42,9 +42,11 @@
       </pre>
     </div>
     <div id="output-def" class="bg-black-100">
+        <h4>js</h4>
         <pre><code></code></pre>
     </div>
     <div id="output-wasm" class="bg-black-100">
+        <h4>wasm</h4>
         <pre><code></code></pre>
     </div>
 </div>
